--- a/frontend/index.html
+++ b/frontend/index.html
@@ -168,10 +168,68 @@
             scrollbar-width: none;
             /* Firefox */
         }
+
+        /* Custom Cursor */
+        body {
+            cursor: none;
+        }
+
+        button,
+        a,
+        input,
+        textarea,
+        select,
+        [role="button"] {
+            cursor: none;
+        }
+
+        .cursor-dot,
+        .cursor-outline {
+            position: fixed;
+            top: 0;
+            left: 0;
+            transform: translate(-50%, -50%);
+            border-radius: 50%;
+            z-index: 9999;
+            pointer-events: none;
+        }
+
+        .cursor-dot {
+            width: 6px;
+            height: 6px;
+            background-color: white;
+            mix-blend-mode: difference;
+        }
+
+        .cursor-outline {
+            width: 30px;
+            height: 30px;
+            border: 1px solid rgba(255, 255, 255, 0.5);
+            transition: transform 0.15s ease-out;
+        }
+
+        /* Ripple Effect */
+        .ripple {
+            position: absolute;
+            background: rgba(255, 255, 255, 0.4);
+            border-radius: 50%;
+            transform: scale(0);
+            animation: ripple 0.6s linear;
+            pointer-events: none;
+        }
+
+        @keyframes ripple {
+            to {
+                transform: scale(4);
+                opacity: 0;
+            }
+        }
     </style>
 </head>
 
 <body class="bg-dark-950 min-h-screen text-slate-100 selection:bg-primary selection:text-white">
+    <!-- Custom Cursor Containers (will be managed by React) -->
+    <div id="cursor-root"></div>
     <div id="root"></div>
 
     <!-- Main Application Logic -->
